<resources>
    <string name="app_name" translatable="false">Magic Wand</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="change_language">Change Language</string>

    <!-- Drawer strings -->
    <string name="menu_home" translatable="false">Home</string>
    <string name="percorso_registrato">Registered Path</string>
    <string name="sessioni_completate">Sessions Completed</string>
    <string name="cambia_password">Change Password</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="informazioni">Information</string>


    <!--Auth_controller-->
    <string name="login" translatable="false">LOGIN</string>
    <string name="registrati">SIGN IN</string>
    <string name="nome">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="password_min_6_caratteri">Password (Minimum 6 characters)</string>
    <string name="ripeti_password">Confirm Password</string>
    <string name="hai_bisogno_della_password">Do you need the password?</string>
    <string name="t1">The e-mail with which you registered is required.</string>
    <string name="resetta_password">RESET PASSWORD</string>
    <string name="errorEmail">Enter a valid email address</string>
    <string name="errorLogin">Authentication failed Check your email and password</string>
    <string name="errorCheck">Email not verified yet. Check your e-mail</string>
    <string name="password_dimenticata">Forgot your password?</string>
    <string name="new_account">Don\'t have an account yet? Register now</string>
    <string name="errorName">min 3 char</string>
    <string name="errorPassword">Invalid password</string>
    <string name="checkEmail">Verification email sent. Check your e-mail</string>
    <string name="errorNewUser">Registration failed</string>
    <string name="resetEmail">Check your email and follow the instructions to reset your password!</string>
    <string name="emailCheck">Email not registered!</string>
    <string name="password" translatable="false">Password</string>


    <string name="stato">Status:</string>
    <string name="user" translatable="false">Email:</string>
    <string name="non_connesso">Disconnect</string>
    <string name="connesso">Connected</string>


    <!-- alert strings -->
    <string name="title">New Path</string>
    <string name="message">Enter the session name</string>
    <string name="btPositive">ADD</string>
    <string name="btAnnulla">CANCEL</string>
    <string name="errorInput">Please enter a valid title</string>
    <string name="errorInputNumber">Please enter valid number</string>

    <string name="tilte2">Attention!</string>
    <string name="message2">Do you want to save the session before leaving?</string>
    <string name="save">SAVE</string>
    <string name="no" translatable="false">NO</string>


    <!--game string-->
    <string name="domanda">QUESTION</string>
    <string name="_1" translatable="false">1</string>
    <string name="inserisci_domanda">Please enter your question</string>
    <string name="inserisci_risposta">Enter an answer</string>
    <string name="seleziona_risposta">Select the correct answer</string>
    <string name="salva_nsessione">Save Session</string>
    <string name="aggiungi_ndomanda">add question</string>


    <!--da riordinare-->
    <string name="lingua_italiana">italian</string>
    <string name="lingua_inglese">english</string>
    <string name="yes">YES</string>
    <string name="welcome">Welcome to Magic Wand</string>
    <string name="delete_path">Are you sure you want to delete this path?</string>
    <string name="language_select">Language already selected!</string>
    <string name="open">open</string>
    <string name="version">version: </string>
    <string name="made_by"><font size="20">made by</font><font size="25"><b> Antonio Ricchetti</b></font></string>
    <string name="chooseEmail">Choose an Email client :</string>
    <string name="correct_answer">Correct answer</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="many_player">How many players are in the session?</string>
    <string name="score">score</string>
    <string name="end_session">Do you want to end the session?</string>
    <string name="saved">saved</string>

    <!--plurals puoi usarle quando termini la sessione e salvi il numero di partecipanti
es: c'era un solo partecipante
c'erano 10 partecipanti-->
    <plurals name="number_of_player">
        <item quantity="one">only one player participates in this session</item>
        <item quantity="other">%d players participate in this session</item>
    </plurals>
    <string name="min_max">min 1 max 10</string>
    <string name="player">player </string>
    <string name="visitor">LOGIN AS VISITOR</string>
    <string name="close">close</string>
    <string name="no_path">NO PATH PRESENT</string>
    <string name="add_one">ADD ONE</string>
    <string name="no_path_completed">NO PATH COMPLETED</string>
    <string name="error">errors</string>
    <string name="path">Path</string>
    <string name="completed">Completed</string>
    <string name="exit">Press back again to exit</string>
    <string name="turn_on">Please turn on GPS</string>
    <string name="position">Position </string>
    <string name="city">City</string>

</resources>