<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_percorso_registrato"
            android:icon="@drawable/ic_menu_percorso"
            android:title="@string/percorso_registrato" />

        <item
            android:id="@+id/nav_sessioni_completate"
            android:icon="@drawable/ic_menu_percorso_completato"
            android:title="@string/sessioni_completate" />

        <item android:title="Account">
            <menu>
                <item
                    android:id="@+id/nav_respass"
                    android:icon="@drawable/ic_vpn_key_24"
                    android:title="@string/cambia_password" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit_to_app_24"
                    android:title="@string/logout" />
            </menu>
        </item>


        <item android:title="Info">
            <menu>
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_nav_info_24"
                    android:title="@string/informazioni" />
            </menu>
        </item>


    </group>
</menu>